# plex-managarr

./: .gitignore  README.md
backend/: env.default.yml  main.py  manage.py  pyproject.toml
backend/managarr/: _config.py  _schema.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
backend/managarr/cli/: __init__.py  generate.py
backend/managarr/core/: settings.py
backend/managarr/routes/: plex.py
backend/managarr/sources/: __init__.py  mediux.py  themoviedb.py  theposterdb.py
backend/managarr/sources/plex/: __init__.py  core.py  schemas.py
backend/managarr/utils/: export.py  scrape.py
frontend/: package.json  pnpm-lock.yaml
frontend/.storybook/: manager.ts  preview.ts
frontend/.storybook/themes/: Quasarr.ts
frontend/src/components/: App.tsx  MovieCollections.tsx
frontend/src/stories/: MovieCollections.stories.ts
frontend/src/styles/: MovieCollections.module.scss
frontend/src/utils/: index.ts
