[tool.poetry]
name = "plex-managarr"
version = "0.1.0"
description = "A metadata and asset manager for Plex."
authors = ["Chris <hexproofsystems@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.32.3"
bs4 = "^0.0.2"
omnitils = {git = "https://github.com/Investigamer/omnitils.git", tag = "1.2.1"}
django = "^5.0.6"
django-ninja = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
